# AwaKurageDownloader

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  vcpkg.json
apps/desktop/: CMakeLists.txt  main.cpp
apps/desktop/qml/: AcidButton.qml  AcidToolButton.qml  AwaTheme.qml  DownloadRow.qml  I18n.qml  Main.qml  SharedGlobe.qml  SidebarButton.qml
apps/desktop/windows/: app.rc
cmake/: AwaPackaging.cmake
docs/: architecture.md  packaging.md
packaging/windows/: AwaKurageDownloader.cmd  README.md  wix-main-template.wxs  wix-main-template.wxs.in  wix-shortcuts-patch.xml  wix-shortcuts-patch.xml.in  wix-shortcuts.wxs  wix-shortcuts.wxs.in
resources/: awa_resources.qrc  world_map_points.json
src/api/: CMakeLists.txt  localapiserver.cpp
src/api/include/awa/api/: localapiserver.h
src/core/: CMakeLists.txt  downloadlistmodel.cpp  downloadmanager.cpp  localgeoipdatabase.cpp  settingsservice.cpp  sharedpeerflowmodel.cpp
src/core/include/awa/core/: downloaditem.h  downloadlistmodel.h  downloadmanager.h  localgeoipdatabase.h  settingsservice.h  sharedpeerflowmodel.h
src/rss/: CMakeLists.txt  rssservice.cpp
src/rss/include/awa/rss/: rssservice.h
src/torrent/: CMakeLists.txt  magnetutils.cpp  torrentservice.cpp
src/torrent/include/awa/torrent/: magnetutils.h  taskstate.h  torrenthelpers.h  torrentservice.h
tests/: CMakeLists.txt  core_tests.cpp  torrent_tests.cpp
